# Foo_et_al

./: .gitignore  CMakeLists.txt  README.md
include/: foo.h
src/: foo.cpp  main.cpp
src/sphere/: sphere.cpp  utils.cpp
tests/sphere/: sphereTest.cpp
